--- a/static/css_file/header.css
+++ b/static/css_file/header.css
@@ -158,12 +158,18 @@ li a{
         
     }
 
+    .cj-btn-menu input {
+        display: none;
+    }
+
     /*btn menu desplegar*/
     .cj-btn-menu{
         display: flex;
         width: 30px;
   
     }
+
+   
 
     .cj-btn-menu .btn-menu-ref{
         width: 100%;
@@ -176,28 +182,36 @@ li a{
     }
 
     nav .cj-menu{
-        display: none;
+        display: flex;
         position: absolute;
         z-index: 1000;
-        width: 100%;
-        height: 100%;
+        width: 90%;
+        min-height: 100%;
         overflow: hidden;
         background: inherit;
         background-color: rgba(255, 255, 255, .15);   
-        backdrop-filter: blur(5px);
+        backdrop-filter: blur(10px);
         overflow: auto;
-        
+        transition: margin-top 1s ease; /* ADDED: Agregamos la transición para el margen superior */
+        margin-top: -400%;
     }
 
+    
     /*apariencia de vidrio*/
     nav .cj-menu:before{
         position: absolute;
         box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
-        filter: blur(10px);
+        filter: blur(15px);
         background: inherit;
 
     }
-    
+
+
+  
+
+    .cj-btn-menu input:checked ~ .cj-menu {
+        opacity: 1;
+    }
 
     .cj-menu ul{
         width: 100%;
@@ -208,6 +222,7 @@ li a{
         margin: auto; /* Centra el menú horizontalmente */
         border: solid 2px rgb(0, 190, 10);
         border-radius: 20px;
+        
        
     }
     
@@ -215,6 +230,7 @@ li a{
         display: flex;
         margin: 30px auto;
         padding: 10px 10px;
+        background-color: rgba(0, 128, 0, 0.559);
     }
     
     li a{
@@ -228,6 +244,11 @@ li a{
 
 
 @media screen and (max-width: 600px){
+
+    .cj-menu{
+        padding-bottom: 100%;
+       
+    }
 
     .cj-logo{
         width: 60px;
@@ -254,6 +275,9 @@ li a{
     }
 
 }
+
+
+
 
 
 
