--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="{% static '../static/css_file/header.css' %}"> <!-- Enlace a tu archivo CSS personalizado -->
   <link rel="stylesheet" href="{% static '../static/css_file/inicio.css' %}"> <!-- Enlace para inicio -->
   <link rel="stylesheet" href="{% static '../static/css_file/sobre-mi.css' %}"> <!-- Enlace para targeta sobre mi -->
+  <link rel="stylesheet" href="{% static '../static/css_file/proyectos.css' %}"> <!-- Enlace para targeta proyectos -->
 </head>
 <body>
   <header>
@@ -100,13 +101,142 @@
       </div>
     </section>
 
-    <section id="proyectos">
+    <section id="proyectos" class="proyectos">
       <!-- Contenido de la sección de proyectos -->
-      
+      <div class="content-galery">
+        <div class="title-galery">
+          <h2>Projects</h2>
+        </div>
+        <div class="sub-content-galery">
+
+          <div class="content-proyect">
+            <div class="content-img">
+              <img src="{% static '../media/captuara-bluubum.jpeg' %}" alt="" class="img-project">
+            </div>
+            <div class="datos">
+              <div class="content-title-proyect">
+                <a href="https://bluubum-api.onrender.com/">affiliate website </a>
+              </div>
+              <div class="content-etiquet-lenguage">
+                <div class="lenguage-uno">
+                  <img src="{% static '../media/python-removebg-preview.png' %}" alt="" class="lenguage">
+                  <div class="progres-bar python-bluubum">
+                    <samp class="progres-bar-tex tex-python-bluubum">30%</samp>
+                  </div>
+                </div>
+                <div class="lenguage-uno" style="width: 20px; border-radius: 50%;">
+                  <img src="{% static '../media/django-removebg-preview.png' %}" alt="" class="lenguage">
+                </div>
+                <div class="lenguage-uno">
+                  <img src="{% static '../media/html5.png' %}" alt="" class="lenguage">
+                  <div class="progres-bar html-bluubum">
+                    <samp class="progres-bar-tex tex-html-bluubum">16%</samp>
+                  </div>
+                </div>
+                <div class="lenguage-uno">
+                  <img src="{% static '../media/css-3.png' %}" alt="" class="lenguage">
+                  <div class="progres-bar css-bluubum">
+                    <samp class="progres-bar-tex tex-css-bluubum">37%</samp>
+                  </div>
+                </div>
+                <div class="lenguage-uno">
+                  <img src="{% static '../media/secuencia-de-comandos-de-java.png' %}" alt="" class="lenguage">
+                  <div class="progres-bar js-bluubum">
+                    <samp class="progres-bar-tex tex-js-bluubum">37%</samp>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="content-proyect">
+            <div class="content-img">
+              <img src="{% static '../media/captuara-bluubum.jpeg' %}" alt="" class="img-project">
+            </div>
+            <div class="datos">
+              <div class="content-title-proyect">
+                <a href="">affiliate website </a>
+              </div>
+              <div class="content-etiquet-lenguage">
+                <div class="lenguage-uno">
+                  <img src="" alt="" class="lenguage">
+                </div>
+                <div class="lenguage-uno">
+                  <img src="" alt="" class="lenguage">
+                </div>
+                <div class="lenguage-uno">
+                  <img src="" alt="" class="lenguage">
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="content-proyect">
+            <div class="content-img">
+              <img src="{% static '../media/captuara-bluubum.jpeg' %}" alt="" class="img-project">
+            </div>
+            <div class="datos">
+              <div class="content-title-proyect">
+                <a href="">affiliate website </a>
+              </div>
+              <div class="content-etiquet-lenguage">
+                <div class="lenguage-uno">
+                  <img src="" alt="" class="lenguage">
+                </div>
+                <div class="lenguage-uno">
+                  <img src="" alt="" class="lenguage">
+                </div>
+                <div class="lenguage-uno">
+                  <img src="" alt="" class="lenguage">
+                </div>
+                <div class="lenguage-uno">
+                  <img src="" alt="" class="lenguage">
+                </div>
+                <div class="lenguage-uno">
+                  <img src="" alt="" class="lenguage">
+                </div>
+             
+              </div>
+            </div>
+          </div>
+
+          <div class="content-proyect">
+            <div class="content-img">
+              <img src="{% static '../media/captuara-bluubum.jpeg' %}" alt="" class="img-project">
+            </div>
+            <div class="datos">
+              <div class="content-title-proyect">
+                <a href="">affiliate website </a>
+              </div>
+              <div class="content-etiquet-lenguage">
+                <div class="lenguage-uno">
+                  <img src="" alt="" class="lenguage">
+                </div>
+                <div class="lenguage-uno">
+                  <img src="" alt="" class="lenguage">
+                </div>
+                <div class="lenguage-uno">
+                  <img src="" alt="" class="lenguage">
+                </div>
+                <div class="lenguage-uno">
+                  <img src="" alt="" class="lenguage">
+                </div>
+                <div class="lenguage-uno">
+                  <img src="" alt="" class="lenguage">
+                </div>
+              
+              </div>
+            </div>
+          </div>  
+        </div>
+      </div>
+
     </section>
 
     <section id="contacto">
       <!-- Contenido de la sección de contacto -->
+      
+
     </section>
   </main>
 
