--- a/templates/home.html
+++ b/templates/home.html
@@ -310,7 +310,7 @@
       <!-- Contenido de la sección de contacto -->
       <div class="sub-content-cont">
         <div class="title-contacto">
-          <h2>Contacto</h2>
+          <h2>Contact</h2>
         </div>
         <div class="content-etiquet-contac">
           <div class="correo-direc">
