--- a/templates/home.html
+++ b/templates/home.html
@@ -75,7 +75,7 @@
         </div>
         <div class="sobre-mi-contenido">
           <div class="content-img-user">
-            <img src="{% static '../media/logo_portafolio.png' %}" alt="Mi fotografía" class="img-user">
+            <img src="{% static '../media/foto-portafolio.jpeg' %}" alt="Mi fotografía" class="img-user">
           </div>
           <div class="data-user">
             <div class="title-id"><p>IDENTIFICATION</p></div>
@@ -137,26 +137,45 @@
             <div class="cubo">
               <!--frente-->
               <div class="from">
+                <video autoplay loop muted>
+                  <source src="{% static '../media/viedo-matrix.mp4' %}" type="video/mp4">
+                </video>
                 <img src="{% static '../media/logo_portafolio.png' %}" alt="" class="img-from">
               </div>
               <!--atras-->
               <div class="atras">
+                <video autoplay loop muted style="opacity: 0.3;">
+                  <source src="{% static '../media/viedo-matrix.mp4' %}" type="video/mp4">
+                </video>
                 <img src="{% static '../media/logo_portafolio.png' %}" alt="" class="img-from">
+                
               </div>
               <!--izquierda-->
               <div class="izquier">
+                <video autoplay loop muted style="opacity: 0.3;">
+                  <source src="{% static '../media/viedo-matrix.mp4' %}" type="video/mp4">
+                </video>
                 <img src="{% static '../media/logo_portafolio.png' %}" alt="" class="img-from">
               </div>
               <!--derecha-->
               <div class="derech">
+                <video autoplay loop muted style="opacity: 0.3;">
+                  <source src="{% static '../media/viedo-matrix.mp4' %}" type="video/mp4">
+                </video>
                 <img src="{% static '../media/logo_portafolio.png' %}" alt="" class="img-from">
               </div>
               <!--arriba-->
               <div class="arriba">
+                <video autoplay loop muted style="opacity: 0.3;">
+                  <source src="{% static '../media/viedo-matrix.mp4' %}" type="video/mp4">
+                </video>
                 <img src="{% static '../media/logo_portafolio.png' %}" alt="" class="img-from">
               </div>
               <!--abajo-->
               <div class="abajo">
+                <video autoplay loop muted style="opacity: 0.3;">
+                  <source src="{% static '../media/viedo-matrix.mp4' %}" type="video/mp4">
+                </video>
                 <img src="{% static '../media/logo_portafolio.png' %}" alt="" class="img-from">
               </div>
               
