--- a/staticfiles/css_file/proyectos.css
+++ b/staticfiles/css_file/proyectos.css
@@ -45,6 +45,7 @@
 
 .sub-content-galery .content-proyect{
     width: 100%;
+    max-width: 250px;
     border-radius: 25px;
     box-shadow: 0 0px 5px 2px rgba(89, 255, 0, 0.356), inset 0 0 10px rgba(241, 255, 234, 0.312), inset 0 0 50px rgba(255, 255, 255, 0.279), inset 0 0 100px rgba(255, 0, 149, 0.274);
     transition: 2s;
@@ -58,6 +59,7 @@
 
 .content-img{
     width: 100%;
+   
     height: 50%;
     border-radius: 25px;
 }
