--- a/templates/home.html
+++ b/templates/home.html
@@ -79,7 +79,7 @@
           </div>
           <div class="data-user">
             <div class="title-id"><p>IDENTIFICATION</p></div>
-            <div class="data-tex-user"><p><span>Name: </span>Aneury Hernandez Peguero</p></div>
+            <div class="data-tex-user"><p><span>Name: </span>Aneury Hernández Peguero</p></div>
             <div class="data-tex-user"><p><span>Nationality: </span>Dominican</p></div>
             <div class="data-tex-user"><p><span>Opcupation: </span>Web developer</p></div>
             <div class="abilid-user">
@@ -111,7 +111,7 @@
             <span class="letter title-destroy">O</span>
             <span class="letter title-destroy">V</span>
             <span class="letter title-destroy">E</span>
-            <span class="letter title-destroy espacion-des">""</span>
+            <span class="letter title-destroy espacion-des">"</span>
             <span class="letter title-destroy">P</span>
             <span class="letter title-destroy">R</span>
             <span class="letter title-destroy">O</span>
